; ModuleID = '/home/carl/AnghaBench/disque/src/extr_server.c_addReplyCommandFlag.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_server.c_addReplyCommandFlag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.serverCommand = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @addReplyCommandFlag(i32* %0, %struct.serverCommand* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.serverCommand*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store %struct.serverCommand* %1, %struct.serverCommand** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %10 = load %struct.serverCommand*, %struct.serverCommand** %7, align 8
  %11 = getelementptr inbounds %struct.serverCommand, %struct.serverCommand* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %8, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %4
  %17 = load i32*, i32** %6, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = call i32 @addReplyStatus(i32* %17, i8* %18)
  store i32 1, i32* %5, align 4
  br label %21

20:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %21

21:                                               ; preds = %20, %16
  %22 = load i32, i32* %5, align 4
  ret i32 %22
}

declare dso_local i32 @addReplyStatus(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
